[project]
name = "llmchatbot"
description = "Generate LLM Chatbot from a Website's URL"
authors = [{ name = "Jordan Ramsey", email = "jordan@logram.io" }]
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
requires-python = "~= 3.11"
license = { file = "LICENSE" }
dependencies = [
    "setuptools",
    "fastapi==0.108.0",
    "uvicorn==0.25.0",
    "pydantic==2.5.3",
    "llama-index==0.10.13",
    "transformers==4.38.0",
    "beautifulsoup4==4.12.2",
    "urllib3==2.1.0",
    "requests==2.31.0",
    "html2text==2020.1.16",
    "playwright==1.40.0",
    "lxml==5.0.0",
    "torch==2.1.2",
]

[project.scripts]
llmchatbot = "llmchatbot.llmchatbot:main"

[project.optional-dependencies]
dev = [
    'llmchatbot[black]',
    'llmchatbot[ruff]',
    'llmchatbot[isort]',
    'llmchatbot[mypy]',
    'llmchatbot[pytest]',
]
black = ['black==23.3.0']
ruff = ['ruff==0.0.263']
isort = ['isort==5.10.1']
mypy = ['mypy==1.2.0', 'types-requests']

[tool.setuptools.dynamic]
version = { attr = "llmchatbot.__version__.__version__" }

[tool.ruff]
exclude = ["docs"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Same as Black.
line-length = 110
extend-select = [
    "UP",     # Pyupgrade
    "RUF100", # Unused noqa (auto-fixable)
]
extend-ignore = [
    # Let isort handle
    "I",
    "E402",
    # Let Black handle
    "E501",
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 8

[tool.black]
line-length = 110
target-version = ['py311']

[tool.mypy]
strict_equality = true
disallow_untyped_decorators = false
warn_unreachable = true
follow_imports = "skip"
ignore_missing_imports = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_testing = ["pytest", "unittest"]
known_typing = "typing"
line_length = 110
lines_between_sections = 0
multi_line_output = 3
sections = [
    "FUTURE",
    "TYPING",
    "TESTING",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
src_paths = "./llmchatbot/"
use_parentheses = true
